# RadarGuiProject

./: CMakeLists.txt  README.md  main.cpp
Dependencies/Downloads/UNIX/: mesa-utils_8.4.0-1build1_amd64.deb
Dependencies/Downloads/UNIX/libgl1-dependencies/: gcc-10-base_10.5.0-1ubuntu1~20.04_amd64.deb  libc6_2.31-0ubuntu9.14_amd64.deb  libgl-dev_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libgl1_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libglapi-mesa_21.2.6-0ubuntu0.1~20.04.2_amd64.deb  libgles-dev_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libglvnd-dev_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libstdc++6_10.5.0-1ubuntu1~20.04_amd64.deb  libwayland-client0_1.18.0-1ubuntu0.1_amd64.deb  libx11-xcb1_2%3a1.6.9-2ubuntu1.6_amd64.deb  libxau-dev_1%3a1.0.9-0ubuntu1_amd64.deb
Dependencies/Downloads/UNIX/libglfw3-dependencies/: libdrm-nouveau2_2.4.107-8ubuntu1~20.04.2_amd64.deb  libdrm-radeon1_2.4.107-8ubuntu1~20.04.2_amd64.deb  libdrm2_2.4.107-8ubuntu1~20.04.2_amd64.deb  libglfw3-dev_3.3.2-1_amd64.deb  libglfw3-wayland_3.3.2-1_amd64.deb  libglvnd0_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libglx-dev_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libsensors5_1%3a3.6.0-2ubuntu1.1_amd64.deb  libwayland-cursor0_1.18.0-1ubuntu0.1_amd64.deb  libwayland-egl1_1.18.0-1ubuntu0.1_amd64.deb  libx11-data_2%3a1.6.9-2ubuntu1.6_all.deb  x11proto-core-dev_2019.2-1ubuntu1_all.deb  xtrans-dev_1.4.0-1_all.deb
Dependencies/lib/: zip.lib
Distributions/Unix/: appConfig.json  imgui.ini
GUI/include/: GuiManager.h  GuiPage.h  RadarMenuPage.h
GUI/src/: RadarMenuPage.cpp
include/: AppConfig.h  ClientApi.h  GuiManager.h  GuiPage.h  MainMenuPage.h  MenuState.h  RadarMenuPage.h  State.h  TCPClient.h  TCPIPBase.h  Tools.h
install/UNIX/libgl1-dependencies/: libdrm-common_2.4.107-8ubuntu1~20.04.2_all.deb  libegl-dev_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libegl-mesa0_21.2.6-0ubuntu0.1~20.04.2_amd64.deb  libegl1_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libgbm1_21.2.6-0ubuntu0.1~20.04.2_amd64.deb  libgl1-mesa-dev_21.2.6-0ubuntu0.1~20.04.2_amd64.deb  libgles1_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libgles2_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libglx-mesa0_21.2.6-0ubuntu0.1~20.04.2_amd64.deb  libopengl-dev_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libwayland-server0_1.18.0-1ubuntu0.1_amd64.deb  libxcb1-dev_1.14-2_amd64.deb  libxdmcp-dev_1%3a1.1.3-0ubuntu1_amd64.deb
install/UNIX/libglfw3-dependencies/: libdrm-amdgpu1_2.4.107-8ubuntu1~20.04.2_amd64.deb  libdrm-intel1_2.4.107-8ubuntu1~20.04.2_amd64.deb  libexpat1_2.2.9-1ubuntu0.6_amd64.deb  libgcc-s1_10.5.0-1ubuntu1~20.04_amd64.deb  libglfw3_3.3.2-1_amd64.deb  libglx0_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libopengl0_1.3.2-1~ubuntu0.20.04.2_amd64.deb  libpthread-stubs0-dev_0.4-1_amd64.deb  libsensors-config_1%3a3.6.0-2ubuntu1.1_all.deb  libtinfo6_6.2-0ubuntu2.1_amd64.deb  libx11-6_2%3a1.6.9-2ubuntu1.6_amd64.deb  libx11-dev_2%3a1.6.9-2ubuntu1.6_amd64.deb  libxcb-xfixes0_1.14-2_amd64.deb  x11proto-dev_2019.2-1ubuntu1_all.deb
source/: AppConfig.cpp  ClientApi.cpp  RadarMenuPage.cpp  TCPClient.cpp  TCPIPBase.cpp  Tools.cpp
src/: AppConfig.cpp  ClientApi.cpp  TCPClient.cpp  TCPIPBase.cpp  Tools.cpp
